# tutochan

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  setup.cfg
.github/workflows/: main.yml
chat/: consumers.py  models.py  routing.py  serializers.py  tests.py  views.py
chat/migrations/: 0001_initial.py
chat/templates/chat/: index.html  room.html
tutochan/: asgi.py  routing.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
tutochan/static/: index.js  manifest.webmanifest  sw.js
tutochan/templates/: base.html  index.html
